pyinterp/pyinterp/pyinterp/tests/must_pass/math/errors/sqrt_domain2.py
print(math.sqrt(-math.inf))